--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 .DS_Store
 .idea
 .vscode
-yarn-error.log
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 node_modules
 dist
+coverage
 
 config/local.config.json
