--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.0.0",
     "style-loader": "^1.1.2",
     "thread-loader": "^2.1.3",
     "unionize": "^3.0.2"
