--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
       "es5",
       "es6",
       "esnext"
-    ]
+    ],
+    "baseUrl": ".",
+    "paths": {
+      "components/*": ["src/components/*"],
+      "core/*": ["src/core/*"],
+      "dataLayer/*": ["src/dataLayer/*"]
+    }
   },
   "include": [
     "src/**/*"
